# praise

./: .env  .gitignore  Dockerfile  build.sh  build_image.sh  custom-nav-controls.vue  global-bottom.vue  global-top.vue  package.json  slides-new.md  slides.md
.github/workflows/: deploy.yml  main.yml
components/: Meet.vue  SongList.vue  VerseList.vue
nginx/: default.conf
pages/: flow.md
public/: update.json
public/assets/lrc/: 001_.lrc  002爱 我愿意.lrc  003爱 喜乐 生命.lrc  004阿爸父.lrc  005宝贵十架.lrc  005宝贵十架韩文.lrc  007别怕路艰难.lrc  007别怕路艰难发哥.lrc  008不是没有家.lrc  009不知道前方的路还有多远.lrc  009不知道前方的路还有多远版本二.lrc  010唱哈利路亚.lrc  011唱一首天上的歌.lrc  011唱一首天上的歌合唱.lrc  012差遣之歌_女声.lrc  012差遣之歌男声.lrc  013彩虹下的约定1.lrc  013彩虹下的约定2.lrc  014把冷漠变成爱.lrc  015-.lrc  016-.lrc  016.lrc  017-.lrc  017常常喜乐.lrc  019-.lrc  019-赐我自由.lrc  020-.lrc  020-曾有一双手.lrc  021.当圣灵在我的心.lrc  022当以感谢进入他的门_合唱.lrc  023向耶和华歌唱_合唱_卡农.lrc  024得胜得胜_童声.lrc  025-.lrc  026丰盛的人生_女声.lrc  028复兴2000.lrc  029-.lrc  030-.lrc  030感恩的泪_女声.lrc  031光明之子.lrc  032_.lrc  (+297 more)
public/assets/vtt/: test.srt  test.vtt
script/: aa.py  ada.py  auto.py  convertLabelMeXML2Excel.py  extract_image.py  music_map.py  nvr.py  puship.py  song.txt  songbak.txt  songmd.py  srt2lrc.py  srt2vtt.py  test.lrc  test.py  testnvr.py  walkpath.py  whisper_test.py
setup/: songlist.js
setup/Broadcast/: lib.js
src-tauri/: Cargo.lock1  Cargo.toml  tauri.conf.json
styles/: style.css
