[package]
name = "app"
version = "0.1.0"
description = "LOVE"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
#openssl = "0.10.66"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = [ "shell-all", "dialog-all", "updater", "windows7-compat"] }
openssl = { version = "0.10.66", features = ["vendored"] }
#Supporting Windows 7 : 参考 https://tauri.app/zh-cn/v1/guides/building/windows
[dev-dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
#openssl = "0.10.66"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
